// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List Is not visible 1`] = `
.c0 {
  display: none;
  position: unset;
  width: unset;
}

.c1 {
  background-color: #FFFFFF;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  list-style-type: none;
  margin: 0;
  max-height: 128px;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
  overflow-y: auto;
  padding: 0;
  width: 100%;
}

.c1:focus {
  box-shadow: var(--focus-box-shadow);
  outline: none;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: inherit;
  color: #000000;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 32px;
  line-height: 32px;
  overflow: hidden;
  padding: 0 8px 0 var(--spacing-2x);
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2:hover,
.c2:focus {
  background-color: #D9DDE2;
}

<div
  className="c0"
  role="listbox"
  tabIndex={-1}
>
  <ul
    className="c1"
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    role="presentation"
    tabIndex={0}
  >
    <li
      aria-label="Option A"
      aria-selected={false}
      className="c2"
      id="undefined_optionA"
      onClick={[Function]}
      role="option"
      selected={false}
    >
      Option A
    </li>
    <li
      aria-label="Option B"
      aria-selected={false}
      className="c2"
      id="undefined_optionB"
      onClick={[Function]}
      role="option"
      selected={false}
    >
      Option B
    </li>
    <li
      aria-label="Option C"
      aria-selected={false}
      className="c2"
      id="undefined_optionC"
      onClick={[Function]}
      role="option"
      selected={false}
    >
      Option C
    </li>
    <li
      aria-label="Option D"
      aria-selected={false}
      className="c2"
      id="undefined_optionD"
      onClick={[Function]}
      role="option"
      selected={false}
    >
      Option D
    </li>
  </ul>
</div>
`;

exports[`List Matches the snapshot (dropdown) 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  width: 100%;
}

.c1 {
  background-color: #FFFFFF;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  list-style-type: none;
  margin: 0;
  max-height: 96px;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
  overflow-y: auto;
  padding: 0;
  width: 100%;
}

.c1:focus {
  box-shadow: var(--focus-box-shadow);
  outline: none;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: inherit;
  color: #000000;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 32px;
  line-height: 32px;
  overflow: hidden;
  padding: 0 8px 0 var(--spacing-4x);
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2:hover,
.c2:focus {
  background-color: #D9DDE2;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: inherit;
  color: #000000;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 32px;
  line-height: 32px;
  overflow: hidden;
  padding: 0 8px 0 0;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c3:hover,
.c3:focus {
  background-color: #D9DDE2;
}

.c4 {
  color: #57666E;
  padding: 0 var(--spacing-1x);
}

<div
  aria-activedescendant="undefined_optionB"
  aria-labelledby="undefined_optionB"
  className="c0"
  role="listbox"
  tabIndex={-1}
>
  <ul
    className="c1"
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    role="presentation"
    tabIndex={0}
  >
    <li
      aria-label="Option A"
      aria-selected={false}
      className="c2"
      id="undefined_optionA"
      onClick={[Function]}
      role="option"
      selected={false}
    >
      Option A
    </li>
    <li
      aria-label="Option B"
      aria-selected={true}
      className="c3"
      id="undefined_optionB"
      onClick={[Function]}
      role="option"
      selected={true}
    >
      <svg
        className="c4"
        color="currentColor"
        focusable={false}
        height="16"
        width="16"
      />
      Option B
    </li>
    <li
      aria-label="Option C"
      aria-selected={false}
      className="c2"
      id="undefined_optionC"
      onClick={[Function]}
      role="option"
      selected={false}
    >
      Option C
    </li>
    <li
      aria-label="Option D"
      aria-selected={false}
      className="c2"
      id="undefined_optionD"
      onClick={[Function]}
      role="option"
      selected={false}
    >
      Option D
    </li>
  </ul>
</div>
`;

exports[`List Matches the snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: unset;
  width: unset;
}

.c1 {
  background-color: #FFFFFF;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  list-style-type: none;
  margin: 0;
  max-height: 96px;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
  overflow-y: auto;
  padding: 0;
  width: 100%;
}

.c1:focus {
  box-shadow: var(--focus-box-shadow);
  outline: none;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: inherit;
  color: #000000;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 32px;
  line-height: 32px;
  overflow: hidden;
  padding: 0 8px 0 var(--spacing-4x);
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c2:hover,
.c2:focus {
  background-color: #D9DDE2;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #D9DDE2;
  color: #000000;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 32px;
  line-height: 32px;
  overflow: hidden;
  padding: 0 8px 0 0;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c3:hover,
.c3:focus {
  background-color: #D9DDE2;
}

.c4 {
  color: #57666E;
  padding: 0 var(--spacing-1x);
}

<div
  aria-activedescendant="undefined_optionB"
  aria-labelledby="undefined_optionB"
  className="c0"
  role="listbox"
  tabIndex={-1}
>
  <ul
    className="c1"
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    role="presentation"
    tabIndex={0}
  >
    <li
      aria-label="Option A"
      aria-selected={false}
      className="c2"
      id="undefined_optionA"
      onClick={[Function]}
      role="option"
      selected={false}
    >
      Option A
    </li>
    <li
      aria-label="Option B"
      aria-selected={true}
      className="c3"
      id="undefined_optionB"
      onClick={[Function]}
      role="option"
      selected={true}
    >
      <svg
        className="c4"
        color="currentColor"
        focusable={false}
        height="16"
        width="16"
      />
      Option B
    </li>
    <li
      aria-label="Option C"
      aria-selected={false}
      className="c2"
      id="undefined_optionC"
      onClick={[Function]}
      role="option"
      selected={false}
    >
      Option C
    </li>
    <li
      aria-label="Option D"
      aria-selected={false}
      className="c2"
      id="undefined_optionD"
      onClick={[Function]}
      role="option"
      selected={false}
    >
      Option D
    </li>
  </ul>
</div>
`;
